--- a/vignettes/wsynvignette_refs.bib
+++ b/vignettes/wsynvignette_refs.bib
@@ -37,6 +37,23 @@ title={Spatial synchrony in population dynamics},
 volume={35},
 year={2004}}
 
+@article{Prichard_94,
+author={Prichard, D and Theiler, J},
+journal={Physical Review Letters},
+number={7},
+pages={951-954},
+title={Generating surrogate data for time series with several simultaneously measured variables},
+volume={73},
+year={1994}}
+
+@article{Schreiber_00,
+author = {Schreiber, T and Schmitz, A},
+title = {{Surrogate time series}},
+Journal = {{Physica D}},
+Year = {{2000}},
+Volume = {{142}},
+Pages = {{346-382}}}
+
 @article{Sheppard_16,
 author={Sheppard, LW and Bell, J and Harrington, R and Reuman, DC},
 title={Changes in large-scale climate alter spatial synchrony of aphid pests},
